--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -1952,6 +1952,23 @@
             </objects>
             <point key="canvasLocation" x="3394.5" y="-917"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="X0y-ae-IDk">
+            <objects>
+                <viewController id="g5w-d5-lvB" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0Il-Eh-YTK"/>
+                        <viewControllerLayoutGuide type="bottom" id="UH1-RU-ZNz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="f8N-bh-N7Q">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OWN-rb-p2e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4129.5" y="-917"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ios_icon_10" width="24" height="24"/>
